--- a/main.css
+++ b/main.css
@@ -1,23 +1,38 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+body {
+	background-color: hsl(200, 50%, 90%);
+}
 table {
-  height: 100%;
+  height: 96%;
   width: 50%;
+  margin: 0 25%;
   border-collapse: collapse;
+  border: 0.1px solid black;
 }
 td {
-  border: 0.1px inset black;
-  
+  background-color: white;
+  border: 0.1px solid #ccc;
 }
 .highlight {
   background-color: black;
 }
-#clear { 
-  height: 50px;
-  width: 600px;
-  background-color: white;
+#clear {  
+  letter-spacing: 12px;
+  font-size: 1.5em;
+  padding: 8px;
+  width: 50%;
+  margin: 0 25%;
+  background-color: hsl(200, 50%, 50%);
+  color: white;
+  border: 0px;
+  border-radius: 10px;
 }
 .container {
-	position: absolute;
-	top: 60px;
-	bottom: 0;
-	width: 100%;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  width: 100%;
 }
